--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,14 @@ spring.application.name=food-order
 server.port=9090
 
 # database
-spring.datasource.url=jdbc:mysql://localhost:3306/food_order
+spring.datasource.url=jdbc:mysql://localhost:3306/mini_3?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#jpa properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
