--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=food-order
 server.port=9090
 
 # database
-spring.datasource.url=jdbc:mysql://localhost:3306/00_mini_3?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/100_test?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
